# mini-grpo

./: .gitignore  README.md  minigrpo.py  mkdocs.yml  plot_metrics.py  pyproject.toml
docs/: grpo_objective.md  implementation.md  index.md  kl_divergence.md  log_softmax.md  memory_efficiency.md  multi_gpu_transfer.md  torch_gather.md  torch_stack.md
